feat: Собран макет

--- a/index.html
+++ b/index.html
@@ -13,56 +13,59 @@
     </header>
 
     <section class="profile">
-      <div class="profile__pic"></div>
+      <img src="./images/cousteau.jpg" alt="" class="profile__pic">
       <div class="profile__info">
-        <input class="profile__name"></input>
-        <input class="profile__title"></input>
+        <div class="profile__wrapper">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button button-style__reset"></button>
+        </div>
+        <p class="profile__title">Исследователь океана</p>
       </div>
-      <button class="profile__edit-button"></button>
-      <button class="profile__add-button"></button>
+      
+      <button class="profile__add-button button-style__reset"></button>
     </section>
 
     <section class="cards">
       <div class="card">
-        <img src="" alt="" class="card__image">
+        <img src="./images/photo-code.jpg" alt="Код на экране" class="card__image">
         <div class="card__item">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <h2 class="card__title">Кодинг</h2>
+          <button class="card__like-button button-style__reset"></button>
         </div>
       </div>
       <div class="card">
-        <img src="" alt="" class="card__image">
+        <img src="./images/photo-pc.jpg" alt="Системный блок" class="card__image">
         <div class="card__item">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <h2 class="card__title">Железо</h2>
+          <button class="card__like-button button-style__reset"></button>
         </div>
       </div>
       <div class="card">
-        <img src="" alt="" class="card__image">
+        <img src="./images/photo-chopper.jpg" alt="Мотоцикл" class="card__image">
         <div class="card__item">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <h2 class="card__title">Свобода</h2>
+          <button class="card__like-button button-style__reset"></button>
         </div>
       </div>
       <div class="card">
-        <img src="" alt="" class="card__image">
+        <img src="./images/photo-jellyfish.jpg" alt="Медуза" class="card__image">
         <div class="card__item">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <h2 class="card__title">Поток</h2>
+          <button class="card__like-button button-style__reset"></button>
         </div>
       </div>
       <div class="card">
-        <img src="" alt="" class="card__image">
+        <img src="./images/photo-london.jpg" alt="Лондонский Тауэр" class="card__image">
         <div class="card__item">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <h2 class="card__title">Альбион</h2>
+          <button class="card__like-button button-style__reset"></button>
         </div>
       </div>
       <div class="card">
-        <img src="" alt="" class="card__image">
+        <img src="./images/photo-cat.jpg" alt="Котик" class="card__image">
         <div class="card__item">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button"></button>
+          <h2 class="card__title">Настрой</h2>
+          <button class="card__like-button button-style__reset"></button>
         </div>
       </div>
     </section>
