--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main class="content">
       <section class="profile">
-        <img src="./images/cousteau.jpg" alt="" class="profile__pic">
+        <img src="./images/cousteau.jpg" alt="Фото Жак-Ива Кусто" class="profile__pic">
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -26,57 +26,59 @@
         <button class="profile__add-button button-style__reset"></button>
       </section>
 
-      <ul class="cards">
-        <li class="card">
-          <img src="./images/photo-code.jpg" alt="Код на экране" class="card__image">
-          <div class="card__item">
-            <h2 class="card__title">Кодинг</h2>
-            <button class="card__like-button button-style__reset"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/photo-pc.jpg" alt="Системный блок" class="card__image">
-          <div class="card__item">
-            <h2 class="card__title">Железо</h2>
-            <button class="card__like-button button-style__reset"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/photo-chopper.jpg" alt="Мотоцикл" class="card__image">
-          <div class="card__item">
-            <h2 class="card__title">Свобода</h2>
-            <button class="card__like-button button-style__reset"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/photo-jellyfish.jpg" alt="Медуза" class="card__image">
-          <div class="card__item">
-            <h2 class="card__title">Поток</h2>
-            <button class="card__like-button button-style__reset"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/photo-london.jpg" alt="Лондонский Тауэр" class="card__image">
-          <div class="card__item">
-            <h2 class="card__title">Альбион</h2>
-            <button class="card__like-button button-style__reset"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/photo-cat.jpg" alt="Котик" class="card__image">
-          <div class="card__item">
-            <h2 class="card__title">Настрой</h2>
-            <button class="card__like-button button-style__reset"></button>
-          </div>
-        </li>
-      </ul>
-    </main class="content">
+      <section class="cards">
+        <ul class="cards__list">
+          <li class="card">
+            <img src="./images/photo-code.jpg" alt="Код на экране" class="card__image">
+            <div class="card__item">
+              <h3 class="card__title">Кодинг</h3>
+              <button class="card__like-button button-style__reset"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/photo-pc.jpg" alt="Системный блок" class="card__image">
+            <div class="card__item">
+              <h3 class="card__title">Железо</h3>
+              <button class="card__like-button button-style__reset"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/photo-chopper.jpg" alt="Мотоцикл" class="card__image">
+            <div class="card__item">
+              <h3 class="card__title">Свобода</h3>
+              <button class="card__like-button button-style__reset"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/photo-jellyfish.jpg" alt="Медуза" class="card__image">
+            <div class="card__item">
+              <h3 class="card__title">Поток</h3>
+              <button class="card__like-button button-style__reset"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/photo-london.jpg" alt="Лондонский Тауэр" class="card__image">
+            <div class="card__item">
+              <h3 class="card__title">Альбион</h3>
+              <button class="card__like-button button-style__reset"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/photo-cat.jpg" alt="Котик" class="card__image">
+            <div class="card__item">
+              <h3 class="card__title">Настрой</h3>
+              <button class="card__like-button button-style__reset"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
     
     <section class="popup">
       <div class="popup__container">
-        <h3 class="popup__title">Редактировать профиль</h3>
+        <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form">
-          <input type="text" value="Жак-Ив Кусто" class="popup__input-name">
+          <input type="text" name="name" value="Жак-Ив Кусто" class="popup__input-name">
           <input type="text" value="Исследователь океана" class="popup__input-title">
           <button type="submit" class="popup__save-button button-style__reset">Сохранить</button>
         </form>
@@ -85,7 +87,7 @@
     </section>
 
     <footer class="footer">
-      &copy; 2020 Mesto Russia
+      <span class="footer__copyright">&copy; 2020 Mesto Russia</span>
     </footer>
 
   </div>
