fix: добавить name инпуту, изменить тег в footer

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form">
           <input type="text" name="name" value="Жак-Ив Кусто" class="popup__input-name">
-          <input type="text" value="Исследователь океана" class="popup__input-title">
+          <input type="text" name="job" value="Исследователь океана" class="popup__input-title">
           <button type="submit" class="popup__save-button button-style__reset">Сохранить</button>
         </form>
         <button type="button" class="popup__close-button button-style__reset"></button>
@@ -87,7 +87,7 @@
     </section>
 
     <footer class="footer">
-      <span class="footer__copyright">&copy; 2020 Mesto Russia</span>
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
   </div>
