feat(cards): добавить карточки через js и template

--- a/index.html
+++ b/index.html
@@ -28,48 +28,6 @@
 
       <section class="cards">
         <ul class="cards__list">
-          <li class="card">
-            <img src="./images/photo-code.jpg" alt="Код на экране" class="card__image">
-            <div class="card__item">
-              <h3 class="card__title">Кодинг</h3>
-              <button class="card__like-button button-style__reset"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img src="./images/photo-pc.jpg" alt="Системный блок" class="card__image">
-            <div class="card__item">
-              <h3 class="card__title">Железо</h3>
-              <button class="card__like-button button-style__reset"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img src="./images/photo-chopper.jpg" alt="Мотоцикл" class="card__image">
-            <div class="card__item">
-              <h3 class="card__title">Свобода</h3>
-              <button class="card__like-button button-style__reset"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img src="./images/photo-jellyfish.jpg" alt="Медуза" class="card__image">
-            <div class="card__item">
-              <h3 class="card__title">Поток</h3>
-              <button class="card__like-button button-style__reset"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img src="./images/photo-london.jpg" alt="Лондонский Тауэр" class="card__image">
-            <div class="card__item">
-              <h3 class="card__title">Альбион</h3>
-              <button class="card__like-button button-style__reset"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img src="./images/photo-cat.jpg" alt="Котик" class="card__image">
-            <div class="card__item">
-              <h3 class="card__title">Настрой</h3>
-              <button class="card__like-button button-style__reset"></button>
-            </div>
-          </li>
         </ul>
       </section>
     </main>
@@ -89,7 +47,16 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
-
+    
+    <template id="card__template">
+      <li class="card">
+        <img class="card__image" src="#">
+        <div class="card__item">
+          <h3 class="card__title">s</h3>
+          <button class="card__like-button button-style__reset"></button>
+        </div>
+      </li>
+    </template>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
