feat: добавить новую карточку по клику

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
       </div>
     </section>
 
+    <section class="popup">
+      <div class="popup__container">
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form">
+          <input type="text" name="name" value="Название" class="popup__input-name">
+          <input type="text" name="job" value="Ссылка на карточку" class="popup__input-title">
+          <button type="submit" class="popup__save-button button-style__reset">Создать</button>
+        </form>
+        <button type="button" class="popup__close-button button-style__reset"></button>
+      </div>
+    </section>
+
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
