feat: удалить карточку по клику

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     
     <template id="card__template">
       <li class="card">
+        <button class="card__remove-button button-style__reset"></button>
         <img class="card__image" src="#">
         <div class="card__item">
           <h3 class="card__title">s</h3>
