feat: создать попап разворачивания картинки

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       </div>
     </section>
 
+    <section class="popup popup-image">
+      <div class="popup-image__container">
+          <img src="#" alt="#" class="popup-image__image">
+          <p class="popup-image__title">#</p>
+          <button type="button" class="popup__close-button button-style__reset"></button>
+      </div>
+    </section>
+
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
@@ -65,7 +73,7 @@
         <button class="card__remove-button button-style__reset"></button>
         <img class="card__image" src="#">
         <div class="card__item">
-          <h3 class="card__title">s</h3>
+          <h3 class="card__title"></h3>
           <button class="card__like-button button-style__reset"></button>
         </div>
       </li>
