--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
     </main>
     
-    <section class="popup">
+    <section class="popup popup-profile">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form">
@@ -44,7 +44,7 @@
       </div>
     </section>
 
-    <section class="popup">
+    <section class="popup popup-card">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form">
@@ -68,7 +68,7 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     
-    <template id="card__template">
+    <template id="card-template">
       <li class="card">
         <button class="card__remove-button button-style__reset"></button>
         <img class="card__image" src="#">
