--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form">
-          <input type="text" name="name" value="Жак-Ив Кусто" class="popup__input-name">
-          <input type="text" name="job" value="Исследователь океана" class="popup__input-title">
+          <small class="popup__input_type_error input_name_error-message"></small>
+          <input type="text" name="name" value="Жак-Ив Кусто" placeholder="Ваше имя" class="popup__input popup__input_name" minlength="2" maxlength="40">
+          <small class="popup__input_type_error input_title_error-message"></small>
+          <input type="text" name="job" value="Исследователь океана" placeholder="Ваша работа" class="popup__input popup__input_title" minlength="2" maxlength="200">
           <button type="submit" class="popup__save-button button-style__reset">Сохранить</button>
         </form>
         <button type="button" class="popup__close-button button-style__reset"></button>
@@ -48,9 +50,11 @@
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form">
-          <input type="text" name="name" value="Название" class="popup__input-name">
-          <input type="text" name="job" value="Ссылка на карточку" class="popup__input-title">
-          <button type="submit" class="popup__save-button button-style__reset">Создать</button>
+          <small class="popup__input_type_error input_name_error-message"></small>
+          <input type="text" name="name" value="" placeholder="Название" class="popup__input popup__input_name" minlength="1" maxlength="30">
+          <small class="popup__input_type_error input_title_error-message"></small>
+          <input type="url" name="url" value="" placeholder="Ссылка на карточку" class="popup__input popup__input_title">
+          <button type="submit" class="popup__save-button button-style__reset popup__save-button_disabled" disabled>Создать</button>
         </form>
         <button type="button" class="popup__close-button button-style__reset"></button>
       </div>
@@ -80,5 +84,6 @@
     </template>
   </div>
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 </html>
