--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
       </li>
     </template>
   </div>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
 </body>
 </html>
