--- a/index.html
+++ b/index.html
@@ -86,5 +86,7 @@
   <script type="module" src="./scripts/index.js"></script>
   <script type="module" src="./scripts/FormValidator.js"></script>
   <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/initial-сards.js"></script>
+  <script type="module" src="./scripts/utils.js"></script>
 </body>
 </html>
