--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
     </template>
   </div>
   <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/constants.js"></script>
   <script type="module" src="./scripts/FormValidator.js"></script>
   <script type="module" src="./scripts/Card.js"></script>
   <script type="module" src="./scripts/initial-сards.js"></script>
   <script type="module" src="./scripts/utils.js"></script>
+  <script type="module" src="./scripts/Section.js"></script>
+  <script type="module" src="./scripts/Popup.js"></script>
+  <script type="module" src="./scripts/PopupWithImage.js"></script>
 </body>
 </html>
