--- a/index.html
+++ b/index.html
@@ -92,5 +92,7 @@
   <script type="module" src="./scripts/Section.js"></script>
   <script type="module" src="./scripts/Popup.js"></script>
   <script type="module" src="./scripts/PopupWithImage.js"></script>
+  <script type="module" src="./scripts/PopupWithForm.js"></script>
+  <script type="module" src="./scripts/UserInfo.js"></script>
 </body>
 </html>
