feat(PopupWithForm): может обработать все инпуты

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           <small class="popup__input_type_error input_name_error-message"></small>
           <input type="text" name="name" value="" placeholder="Название" class="popup__input popup__input_name" minlength="1" maxlength="30" required>
           <small class="popup__input_type_error input_title_error-message"></small>
-          <input type="url" name="url" value="" placeholder="Ссылка на карточку" class="popup__input popup__input_title" required>
+          <input type="url" name="link" value="" placeholder="Ссылка на карточку" class="popup__input popup__input_title" required>
           <button type="submit" class="popup__save-button button-style__reset popup__save-button_disabled" disabled>Создать</button>
         </form>
         <button type="button" class="popup__close-button button-style__reset"></button>
