--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,11 @@
 
     <main class="content">
       <section class="profile">
-        <img src="./images/cousteau.jpg" alt="Фото Жак-Ива Кусто" class="profile__pic">
+        
+        <div class="profile__overlay">
+          <img src="./images/cousteau.jpg" alt="Фото Жак-Ива Кусто" class="profile__pic">
+          <img src="./images/edit-profile-icon.svg" alt="edit-icon" class="profile__edit-icon">
+        </div>
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -60,6 +64,16 @@
       </div>
     </section>
 
+    <section class="popup popup-submit">
+      <div class="popup__container">
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form class="popup__form">
+          <button type="submit" class="popup__save-button button-style__reset">Да</button>
+        </form>
+        <button type="button" class="popup__close-button button-style__reset"></button>
+      </div>
+    </section>
+
     <section class="popup popup-image">
       <div class="popup-image__container">
           <img src="#" alt="#" class="popup-image__image">
@@ -78,7 +92,10 @@
         <img class="card__image" src="#">
         <div class="card__item">
           <h3 class="card__title"></h3>
-          <button class="card__like-button button-style__reset"></button>
+          <div class="card__like-container">
+            <button class="card__like-button button-style__reset"></button>
+            <p class="card__like-counter">0</p>
+          </div>
         </div>
       </li>
     </template>
