--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,18 @@
       </div>
     </section>
 
+    <section class="popup popup-avatar">
+      <div class="popup__container">
+        <h2 class="popup__title">Новый аватар</h2>
+        <form class="popup__form">
+          <small class="popup__input_type_error input_title_error-message"></small>
+          <input type="url" name="avatar" value="" placeholder="Ссылка на аватар" class="popup__input popup__input_title" required>
+          <button type="submit" class="popup__save-button button-style__reset popup__save-button_disabled" disabled>Создать</button>
+        </form>
+        <button type="button" class="popup__close-button button-style__reset"></button>
+      </div>
+    </section>
+
     <section class="popup popup-image">
       <div class="popup-image__container">
           <img src="#" alt="#" class="popup-image__image">
