--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
         <form class="popup__form">
           <small class="popup__input_type_error input_title_error-message"></small>
           <input type="url" name="avatar" value="" placeholder="Ссылка на аватар" class="popup__input popup__input_title" required>
-          <button type="submit" class="popup__save-button button-style__reset popup__save-button_disabled" disabled>Создать</button>
+          <button type="submit" class="popup__save-button button-style__reset popup__save-button_disabled" disabled>Изменить</button>
         </form>
         <button type="button" class="popup__close-button button-style__reset"></button>
       </div>
